DPO-2318 review fixes